frontend/melodiket/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Pretendard';
  src: url('../../public/fonts/PretendardVariable.woff2') format('woff2');
}

:root {
  --background: #f7f7f7;
  --foreground: #17171b;
  --font-pretendard: 'Pretendard';
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-pretendard), sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

input[type='date']::-webkit-datetime-edit-text,
input[type='date']::-webkit-datetime-edit-year-field,
input[type='date']::-webkit-datetime-edit-month-field,
input[type='date']::-webkit-datetime-edit-day-field {
  color: #17171b;
}

* {
  overflow-y: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

*::-webkit-scrollbar {
  display: none;
}

